Check server status Websocket support [WIP] Test configuration
